# nyc-taxi-clickhouse-etl

./: .env  .gitignore  OVERVIEW.md  README.md  TESTING_GUIDE.md  main.py  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: ci.yml
docs/: INDEX.md
etl/: TODO.md  __init__.py  __main__.py  checkpoint.py  checkpoint_builder.py  checksum.py  checksum_impl.py  config.py  manifest.py  manifest_updater.py  orchestrator.py  retry.py  state.py
etl/tests/: __init__.py  conftest.py  test_checkpoint.py  test_checksum.py  test_config.py  test_e2e.py  test_fuzz.py  test_manifest.py  test_manifest_recovery.py  test_orchestrator.py  test_orchestrator_adapt.py  test_orchestrator_e2e.py  test_orchestrator_integration.py  test_orchestrator_run.py  test_orchestrator_unit.py  test_properties.py  test_state.py
extract/: DETAILS.md  OVERVIEW.md  REVIEW_EXCEPTION.md  TODO.md  __init__.py
extract/core/: __init__.py  catalog.py  downloader.py  downloader_download.py  downloader_ops.py  downloader_util.py  interrupt.py  known_missing.py  push_manifest.py  state.py  state_manager.py
extract/core/tests/: conftest.py  conftest_e2e.py  test_catalog.py  test_e2e.py  test_e2e_retry.py  test_fuzz.py  test_interrupt.py  test_known_missing.py
extract/core/tests/cassettes/: partial_200_404.yaml  success_200.yaml
extract/downloader/: DETAILS.md  OVERVIEW.md  __init__.py  actions.py  download.py  downloader.py  downloader_actions.py  downloader_download.py  downloader_ops.py  downloader_util.py  ops.py  utils.py
extract/tests/: conftest.py  test_catalog.py  test_catalog_sha256.py  test_downloader.py  test_downloader_download.py  test_downloader_errors.py  test_downloader_helpers.py  test_downloader_io.py  test_downloader_logging.py  test_downloader_ops.py  test_downloader_process.py  test_downloader_run.py  test_e2e.py  test_e2e_errors.py  test_e2e_retry.py  test_helpers.py  test_interrupt.py  test_interrupt_edge_cases.py  test_interrupt_signal.py  test_known_missing.py  test_known_missing_full.py  test_mutant_killing.py  test_properties.py  test_push_manifest.py  test_state.py  test_state_manager.py  test_state_manager_extra.py
extract/tests/downloaders/: test_download_verification.py  test_downloader.py  test_downloader_download.py  test_downloader_download_branches.py  test_downloader_download_error_handling.py  test_downloader_download_errors.py  test_downloader_download_full.py  test_downloader_download_log_http.py  test_downloader_download_verify.py  test_downloader_download_verify_branches.py  test_downloader_errors.py  test_downloader_helpers.py  test_downloader_io.py  test_downloader_log_http_error.py  test_downloader_logging.py  test_downloader_network.py  test_downloader_ops.py  test_downloader_ops_full.py  test_downloader_ops_process.py  test_downloader_ops_skip.py  test_downloader_process.py  test_downloader_run.py  test_downloader_run_full.py  test_downloader_run_full_integration.py  test_downloader_run_integration.py  test_downloader_run_loop.py  test_downloader_run_params.py  test_downloader_run_params_filters.py  test_downloader_util_full.py  test_downloader_utils.py  test_e2e.py  test_e2e_errors.py  test_e2e_manifest.py  test_e2e_retry.py  test_fuzz.py  test_helpers.py  test_helpers_utils.py  test_mutant_download_and_verify.py  test_mutant_killing.py  test_mutant_survivors.py  (+2 more)
extract/tests/downloaders/cassettes/: all_404.yaml  all_500.yaml  checksum_mismatch.yaml
push/: DETAILS.md  OVERVIEW.md  __init__.py
push/core/: __init__.py  checksum.py  client.py  errors.py  filter.py  ops.py  push.py  push_manifest.py  runner.py  state.py
push/tests/: conftest.py  fake_s3.py  test_checksum.py  test_core_env.py  test_core_upload.py  test_delete_after.py  test_e2e_client.py  test_e2e_upload.py  test_filter.py  test_fuzz.py  test_properties.py  test_push_manifest.py  test_state.py
scripts/: lcom.py  run_mutation_ci.sh  run_quality_ci.sh
upload/: __init__.py
upload/core/: __init__.py  checksum.py  client.py  engine.py  errors.py  filter.py  ops.py  runner.py  s3_ops.py  state.py
upload/tests/: conftest.py  fake_s3.py  test_checksum.py  test_core_env.py  test_core_upload.py  test_delete_after.py  test_e2e_client.py  test_e2e_upload.py  test_filter.py  test_fuzz.py  test_get_existing_uploads.py  test_properties.py  test_recover_from_s3.py  test_state.py
