[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nyc-taxi-clickhouse-etl"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "astroid>=4.1.2",
    "boto3>=1.43.2",
    "minio>=7.2.20",
    "python-dotenv>=1.2.2",
    "requests>=2.31",
    "pytest>=7.0",
    "hypothesis>=6.0",
    "mutmut>=3.0",
    "atheris>=3.0",
    "coverage>=7.0",
    "responses>=0.23",
    "vcrpy>=5.0",
    "testcontainers>=4.5",
    "radon>=6.0",
    "xenon>=0.9",
    "vulture>=2.0",
    "cohesion>=1.0",
]

[tool.hypothesis]
max_examples = 30
deadline = 2000

[tool.setuptools.packages.find]
exclude = ["mutants*", "data*"]

[tool.vulture]
ignore_names = [
    "exc_tb",
    "exc_val",
    "fake_parquet_content",
    "mock_200",
    "mock_404",
    "mock_500",
    "side_effect",
    "dirs",
    "S3Ops",
    "Body",
    "Bucket",
    "ContentType",
    "Key",
    "Config",
    "Fileobj",
    "name",
]

[tool.mutmut]
paths_to_mutate = ["etl"]
do_not_mutate = ["*/tests/*", "*/conftest.py", "*/test_*.py", "*/__init__.py"]
pytest_add_cli_args_test_selection = ["etl/tests/", "-q", "--ignore=etl/tests/test_fuzz.py", "--ignore=etl/tests/test_e2e.py"]
exclude_dirs = ["__pycache__", ".venv", "mutants"]
exclude_functions = ["Orchestrator.run", "Orchestrator._reconcile", "Orchestrator._adapt_s3_to_manifest", "main"]
timeout_constant = 1.0
timeout_multiplier = 15.0

[dependency-groups]
dev = [
    "mypy>=1.20.2",
]
