[metadata]
name = nyc-taxi-clickhouse-etl
version = 0.1.0

[options]
packages = find:
python_requires = >=3.11

[options.packages.find]
exclude =
    mutants*

[mutmut]
paths_to_mutate = extract/core/
also_copy =
    extract/__init__.py
    extract/core/__init__.py
    extract/tests/test_catalog.py
    extract/tests/test_downloader.py
    extract/tests/test_interrupt.py
    extract/tests/test_known_missing.py
    extract/tests/test_properties.py
    extract/tests/conftest.py
    extract/tests/cassettes/
tests_dir = extract/tests/
debug = false
