[metadata]
name = nyc-taxi-clickhouse-etl
version = 0.1.0

[options]
packages = find:
python_requires = >=3.11

[options.packages.find]
exclude =
    mutants*

[mutmut]
paths_to_mutate = extract/core/
also_copy =
    extract/__init__.py
    extract/core/__init__.py
    extract/tests/
tests_dir = extract/tests/
debug = false
